made some test changes

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                 <div class="stat-item">
                     <span class="stat-number">24/7</span>
                     <span class="stat-label">AI Availability</span>
+                    <span class="stat-label">AI Availability</span>
                 </div>
             </div>
         </div>
